# hackathon-research-agent

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  ids.txt  pyproject.toml
docs/: dorahacks_submission.md  openclaw_quickstart.md
docs/plans/: 2026-03-05-openclaw-shipping-install-design.md  2026-03-05-openclaw-shipping-install-implementation.md  2026-03-06-personalized-relevance-output-design.md  2026-03-06-personalized-relevance-output-implementation.md
local_kb/: local_manifest.json  local_profile.md 
scripts/: bootstrap_openclaw.sh  smoke_openclaw_install.sh  verify_openclaw_install.py
skill/: SKILL.md  openclaw.json
skill/memory/: profile.json
skill/scripts/: enroll.py  format_whatsapp.py  run_triage.py  setup_daily_cron.py
tests/: test_arxiv.py  test_cli_summary.py  test_connectors.py  test_enroll_script.py  test_formatters.py  test_install_checks.py  test_local_overlap.py  test_models.py  test_parsers.py  test_skill_scripts.py  test_smoke_openclaw_install.py  test_source_registry.py  test_sync.py
triage_agent/: __init__.py  cli.py  config.py  install_checks.py  local_kb.py  orchestrator.py
triage_agent/agents/: __init__.py  base.py  critic.py  local_overlap.py  novelty.py  retriever.py
triage_agent/api/: __init__.py  arxiv.py  semantic_scholar.py
triage_agent/formatters/: __init__.py  json_fmt.py  markdown.py
triage_agent/models/: __init__.py  memo.py  paper.py
triage_agent/sources/: __init__.py  connectors.py  models.py  parsers.py  registry.py  sync.py
triage_agent/utils/: llm.py
